# SEA_Striker_01

./: .gitignore  README.md
C libraries/: README.md
robot-mov/: CMakeLists.txt  Kconfig  index.html  proxy_udp.py  sdkconfig  sdkconfig.old
robot-mov/drivers/bldc_pwm/: bldc_pwm.c
robot-mov/drivers/bldc_pwm/include/: bldc_pwm.h
robot-mov/drivers/sensor_fusion/: sensor_fusion.c
robot-mov/drivers/sensor_fusion/include/: sensor_fusion.h
robot-mov/drivers/wifi_lib/: wifi_lib.c
robot-mov/drivers/wifi_lib/include/: wifi_lib.h
robot-mov/main/: CMakeLists.txt  Kconfig  control_main.c  encoder_calibration.c  escs_calibration.c  main.c  mov_calculation.c
robot-mov/main/include/: control_main.h  mov_calculation.h
robot-mov/sensors/AS5600_HAL_Library/include/: as5600_lib.h
robot-mov/sensors/TM151-driver/: EasyRetrieve.c
robot-mov/sensors/TM151-driver/include/: EasyRetrieve.h
wheel-movement/: README.md
